feat: make nse-news-scheduler production ready